--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
     "axios": "^1.3.3",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.7",
@@ -15,6 +17,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "wagmi": "^0.12.8",
     "web-vitals": "^2.1.4",
     "web3": "^1.3.6",
     "web3modal": "^1.9.4"
